Amarok ChangeLog
================
(C) 2002-2010 the Amarok authors.


VERSION 2.3.1
  CHANGES:

  BUGFIXES:
    * Queued track's contextual menu entry about dequeueing was written wrong
      and misleading. (BR 235047)
    * Custom color setting in the On Screen Display was only applied after
      restart. Patch by Frank Steinmetzger <Warp_7@gmx.de>.
    * Track Rating was not always displayed correctly in the On Screen
      Display. Patch by Frank Steinmetzger <Warp_7@gmx.de>.
    * Improved layout for applet setting dialogs. Patch by Felix Geyer
      <debfx-kde@fobos.de>.
    * Made icons in applets react correctly in double-click environments.
      Thanks to Felix Geyer <debfx-kde@fobos.de>.
    * Several bug fixes for the bundled LyricWiki script. Patch by Oleg G
      <verdrehung@gmail.com>. (BR 233605)
    * Better fix for pausing SHOUTcast streams, without advancing to the next
      track after resume. (BR 192878)


VERSION 2.3.1-Beta 1
  FEATURES:
    * Persistant Queue Saving: The playlist queue is now saved when Amarok
      is closed and restored upon startup. (BR 215057)
    * Automated Playlist Generator: allows smart creation of playlists that
      match user-specified constraints. Combines the features of "Smart
      Playlists" in Amarok 1.4 with the Bias system of Amarok 2.0.
    * It's now possible to mark all episodes in a channel as old or new at once.
    * New "Upcoming Events" applet, displays future concerts for the artist of
      the currently playing track. The event info is fetched from Last.fm.
    * New "Similar Artists" applet, displays a list of artists which are
      similar to the one currently played. The list is fetched from Last.fm.
    * The scripting system now offers a new function for detecting that a 
      track has finished. Patch by Michael MacDonald <mars@antlersoft.com>.
      (BR 227312)
    * New "CoverBling" applet, which allows to browse your collection in an 