@@ -7,6 +7,8 @@ VERSION 2.3.1
   CHANGES:
 
   BUGFIXES:
+    * File browser: show folders first, files afterwards. Patch by
+      <dystopticus@gmx.net>. (BR 226599)
     * Queued track's contextual menu entry about dequeueing was written wrong
       and misleading. (BR 235047)
     * Custom color setting in the On Screen Display was only applied after
